<?xml version="1.0"?>
<package>
  <name>super_modified_servo</name>
  <version>0.0.1</version>
  <description>Package for 01mechatronics super modified servo </description>

  <maintainer email="azisi@windowslive.com">azisi</maintainer>
  <author email="azisi@windowslive.com">azisi</author>

  <license>GPLv2.1</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>